<resources>
    <string name="app_name">BosomCode</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- 登录界面-->
    <string name="login_tip_one">知 心 药 码</string>
    <string name="login_tip_two">您    的    健    康    管    家</string>
    <string name="login_username_hint">请输入您的邮箱号</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="login_login_text">登       录</string>
    <string name="login_register_text">注       册</string>
    <string name="login_forget_password_text">忘 记 密 码 ？</string>

    <!--注册界面-->
    <string name="register_title">Make Health Healthy</string>
    <string name="register_tip_one">我已阅读并同意</string>
    <string name="register_tip_two">《知心药码服务条款》</string>
    <string name="register_username_hint">请输入您的邮箱号</string>
    <string name="register_password_hint_1">请输入密码</string>
    <string name="register_password_hint_2">请再输入一次密码</string>
    <string name="register_bt_text">立 即 注 册</string>
    <string name="register_backto_login_text">返 回 登 录</string>

    <!--注册成功界面-->
    <string name="register_succeed_tip">恭喜您,注册成功!</string>
    <string name="register_succeed_login_now_text">立 即 登 录</string>
    <string name="register_succeed_login_other_way_text">使用其他账号登录</string>

    <!--主界面-->
    <string name="main_top_text">知 心 药 码</string>
    <string name="main_bottom_tab1">个性资讯</string>
    <string name="main_bottom_tab2">知心药码</string>
    <string name="main_bottom_tab3">用药提醒</string>
    <string name="center_fragment_scan_bt_text">扫码识药</string>
    <string name="center_fragment_personnal_bt_text">私人专家</string>
    <string name="center_fragment_share_bt_text">心得分享</string>
    <string name="center_fragment_call_help_bt_text">一键呼救</string>
    <string name="left_fragment_classify_bt_text">分类查看</string>
    <string name="right_fragment_add_detector">添 加 用 药 提 醒</string>


    <!--添加用药提醒-->
    <string name="add_remind_title_text">添 加 提 醒</string>
    <string name="add_remind_medicine_name_text">药品名称：</string>
    <string name="add_remind_medicine_comment_text">药品备注：</string>

    <!-- 设置界面-->
    <string name="set_exit_account">注 销 账 号</string>

    <!--侧滑菜单界面-->
    <string name="for_test">小娜</string>
    <string name="slide_menu_collection">我的收藏</string>
    <string name="slide_menu_medical_history">我的病史</string>
    <string name="slide_menu_medicine_avoid">用药禁忌</string>
    <string name="slide_menu_my_doctor">我的医生</string>
    <string name="slide_menu_keep_health">养生良方</string>
    <string name="slide_menu_cure_disease">治病灵药</string>
    <string name="slide_menu_notice">通  知</string>
    <string name="slide_menu_setting">设  置</string>

    <!--心得分享界面-->
    <string name="share_thought_edit_text">在这里写下您想要分享的内容吧</string>
    <string name="share_thought_bt_text">分   享</string>

    <!--一键呼救界面-->
    <string name="call_help_add_name_tip_text">医 生 姓 名:</string>
    <string name="call_help_phoneNumber_tip_text">联系电话(手机):</string>

    <!--添加用药提醒-->
    <string name="add_remind_content_tip_text">用 药 提 示:</string>
    <string name="add_remind_content_tip2_text">请 填 写 药 品 名 称:</string>
    <string name="add_remind_amount_tip_text">请填写份数:</string>
    <string name="add_remind_content_hint">填 写 您 的 详 细 用 药 内 容</string>
    <string name="add_remind_amount_hint">份 数</string>
    <string name="add_remind_time_tip_text">用 药 时 间:</string>
    <string name="add_remind_time_bt_text">点 击 设 置 用 药 时 间</string>
    <string name="add_remind_before_meal_radio_text">饭 前</string>
    <string name="add_remind_after_meal_radio_text">饭 后</string>
    <string name="add_remind_add_medicine_bt_text">添 加 新 药 品</string>
    <string name="add_remind_set_time_meal_tip_text">请选择饭前还是饭后:</string>
    <string name="add_remind_set_time_add_time_text">点 击 添 加 用 药 时 间</string>

    <!--闹钟界面-->
    <string name="alarm_activity_close_tip_text">向 上 滑 动 关 闭</string>
    <string name="alarm_activity_text1">主人,</string>
    <string name="alarm_activity_text2">用药时间到啦!</string>

    <!--用药提示-->
    <string name="medication_prompts_medicine_tip">用 药 提 示</string>
    <string name="medication_prompts_doctor_tip">联 系 医 生</string>
    <string name="medication_prompts_doctor_name_tip">姓  名</string>
    <string name="medication_prompts_doctor_phone_tip">电  话</string>


    <string name="medicine_avoid_text">1.忌辛辣,海鲜\n2.忌降压操之过急\n3.忌单一用药\n4.忌不测血压服药\n5.忌间断服降压药\n6.忌无症状不服药\n7.忌临睡前服降压药\n8.忌解热镇痛类药物</string>
</resources>
