<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register_bg"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/register_succeed_tip"
        android:textSize="30sp" />

    <Button
        android:id="@+id/register_succeed_login_now_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_login_bt_bg"
        android:text="@string/register_succeed_login_now_text"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/register_succeed_login_other_way_bt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_toregister_bt_bg"
        android:text="@string/register_succeed_login_other_way_text"
        android:textSize="25sp" />
</LinearLayout>