<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_remind_time_up_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alarm_activity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/alarm_activity_text1"
        android:textColor="@color/purple"
        android:textSize="35sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_activity_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/alarm_activity_text2"
        android:textColor="@color/purple"
        android:textSize="35sp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:background="@drawable/up_bg"/>

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/alarm_activity_close_tip_text"
        android:textSize="16sp"/>

</RelativeLayout>