<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp">

        <ImageButton
            android:id="@+id/add_remind_set_time_cancel_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:background="@drawable/cancel_bt_bg" />

        <ImageButton
            android:id="@+id/add_remind_set_time_confirm_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/confirm_bt_bg" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
       >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/add_remind_set_time_meal_tip_text"
            android:textColor="@color/purple" />

        <RadioGroup
            android:id="@+id/add_remind_set_time_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/add_remind_before_meal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/add_remind_after_meal_radio"
                android:text="@string/add_remind_before_meal_radio_text" />

            <RadioButton
                android:id="@+id/add_remind_after_meal_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="2dp"
                android:checked="true"
                android:text="@string/add_remind_after_meal_radio_text" />
        </RadioGroup>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/add_remind_set_time_add_time_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/clear"
            android:text="@string/add_remind_set_time_add_time_text"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/right_fragment_remind_bt_icon"
            android:scaleType="fitCenter" />
    </FrameLayout>

    <ListView
        android:id="@+id/add_remind_set_time_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/light_purple"
        android:dividerHeight="0.1dp"
        android:fastScrollEnabled="true"
        android:scrollbars="none"
        android:scrollingCache="true" />
</LinearLayout>